--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.2",
+    "@types/crypto-js": "^4.2.2",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.344.0",
